fixed alignment issue regarding country names

--- a/styles.css
+++ b/styles.css
@@ -215,9 +215,9 @@ button:focus {
     margin: 100px auto;
 }
 
-#globallist span {
+.listheader {
     font-weight: 900;
-    margin: 0 0 0 10px;
+    margin: 10px 0 0 0;
 }
 
 #globallist img, #flagdisplay2 img {
